# 11_llm_rag_poc

./: .env.example  .gitignore  README.md  build.sh  main.py  pyproject.toml  pytest.ini  run.py  run_app.sh  test.sh
rag_poc/: argument_parsing.py  config.py  validation.py
scripts/: chat.py  fetching.py  indexing.py
tests/: test_event_model.py  test_fetch_script.py
